--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Flask==2.3.2
 mysql-connector-python==8.1.0
 python-dotenv==1.0.0
 Werkzeug==3.0.0
-Pillow==9.5.0
+Pillow==9.5.0 --only-binary=:all:
 fuzzywuzzy[speedup]==0.19.1
 gunicorn==20.1.0
