--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ mysql-connector-python==8.1.0
 python-dotenv==1.0.0
 Werkzeug==3.0.0
 Pillow==11.0.0
-fuzzywuzzy[speedup]==0.19.1
+fuzzywuzzy==0.18.0
 gunicorn==20.1.0
