Update Lost & Found app with image hash system

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-# Update these values if needed
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=mithul
-DB_NAME=lost_and_found
-DB_PORT=3306
-SECRET_KEY=change-me-to-a-secret
-UPLOAD_FOLDER=static/uploads
+DB_HOST=bhe5ouni2ddurdorxrum-mysql.services.clever-cloud.com
+DB_USER=urul80utrapmaxcl
+DB_PASSWORD=YYUzrJrTyCee2IhPVBDz
+DB_NAME=bhe5ouni2ddurdorxrum
+
